Fix header to content alignment

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,11 +1,11 @@
 img.logo {
     height     : 2.4rem;
     margin-top : 1.46rem;
-    margin-left: 11rem;
+    margin-left: 12%;
 }
 
 div.contributors {
-    margin-right: 11rem;
+    margin-right: 12%;
     float       : right;
     height      : 5.3rem;
     display     : flex;
